[package]
name = "sandbox"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bolt = { path = "../bolt" }
#TODO: Remove as many of these as possible:
anyhow = "*"
winit = "*"
image="*"
cgmath = "*"
env_logger="*"
log="*"
wgpu = "0.11.0"
pollster="*"
bytemuck = { version = "*", features = ["derive"] }
